# Arducam-RoAD.B-USB-Demo

./: .gitignore  README.md  calib_example.json  configure_udev_rules.sh
advanced/stereo_match/: README.md  pyproject.toml
advanced/stereo_match/utils/: __init__.py  stereo.py
advanced_demo/stereo_match/: README.md  core.py  demo.py  requirements.txt
advanced_demo/stereo_match/utils/: stereo.py
c/: CMakeLists.txt  README.md  read_calib_data.c  write_calib_data.c
c++/: CMakeLists.txt  README.md  read_calib_data.cpp  write_calib_data.cpp
doc/: linux_environmental_install.md
python/: README.md  calib.py  read_calib_data.py  rectify_demo.py  requirements.txt  write_calib_data.py
python/calibration/: calib.py
python/stereo_match/: README.md  core.py  demo.py  requirements.txt
python/undistort/: rectify.py
python/utils/: stereo.py
res/: configure_udev_rules.sh
ros2/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2/arducam_uvc_stereo_ros/: __init__.py  calibration.py  capture_backend.py  cpp_bootstrap.py  device_selector.py  driver_node.py  list_devices.py  naming.py
ros2/resource/: arducam_uvc_stereo_ros
ros2/scripts/: list_devices  stereo_camera_node
ros2/src/: stereo_camera_node.cpp
